Fixed the collapse button

--- a/web_app/sdlc-checklist/src/app/app.component.css
+++ b/web_app/sdlc-checklist/src/app/app.component.css
@@ -201,10 +201,14 @@ nav {
   margin: 25px 25px 25px 0;
   float: right;
   position: relative;
-  top: -15px;
+}
+
+.raised {
+  top: -20px;
 }
 
 .button-caption {
   display: inline-block;
   margin: 5px;
+  user-select: none;
 }
