--- a/web_app/sdlc-checklist/src/app/catalog-info/catalog-info.component.css
+++ b/web_app/sdlc-checklist/src/app/catalog-info/catalog-info.component.css
@@ -2,7 +2,7 @@
 .catalog-info {
   width: 97%;
   border-bottom: 1px solid black;
-  margin: 20px 0;
+  margin: 20px 0 0;
   padding-left: 3%;
 }
 
